<resources>
    <string name="app_name">WorkTime</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="prompt_username">Username</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">WorkTime</string>

    <!-- Strings related to the Navigation tab-->
    <string name="logout_name">Logout</string>
    <string name="settings_name">Settings</string>
    <string name="profile_name">Profile</string>
    <string name="view_name">View</string>
    <string name="select_new_date">Select new date</string>
    <string name="nav_username">Username</string>
    <string name="nav_email">app@worktime.com</string>
    <string name="nav_about">About the app</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="actions">Actions</string>
    <string name="personal">Personal</string>

    <!-- Strings for Themes -->
    <string name="pref_header_choose_theme">Theme</string>
    <string name="pref_title_choose_theme">Choose Theme</string>
    <string-array name="pref_choose_theme_titles">
        <item>Standard</item>
        <item>Light Mode</item>
        <item>Dark Mode</item>
        <item>Green Lantern</item>
        <item>Deep Ocean</item>
        <item>Chaotic Mind</item>
        <item>Rainbow</item>
    </string-array>
    <string-array name="pref_choose_theme_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>

    <!-- Strings for language -->
    <string name="pref_header_choose_language">Language</string>
    <string name="pref_title_choose_language">Choose Language</string>
    <string-array name="pref_choose_language_titles">
        <item>German</item>
        <item>English</item>
    </string-array>
    <string-array name="pref_choose_language_values">
        <item>1</item>
        <item>2</item>
    </string-array>

    <!-- Strings for the about_fragment -->
    <string name="about_fragment_title">Über die App</string>
    <string name="about_fragment_app_name">App name: WorkTime</string>
    <string name="about_fragment_version">Version-Nr.: 1.0</string>
    <string name="about_fragment_developed_by">Developed by:\nPhil Hansen\nNiklas Schicker\nHelge Nieblich</string>
    <string name="about_fragment_time_of_development">Period of development:\n03.07.2017 – 21.07.2017</string>
    <string name="about_fragment_git_link">GitHub Repository</string>
    <string name="about_fragment_contact">Contact</string>
    <string name="about_fragment_imprint">Impressum</string>
    <string name="title_activity_time_table_entry_creation">Create entry</string>
    <string name="unknown_username">Unknown username</string>

    <!-- String related to creating a new entry -->
    <string name="entry_form_activity_prompt">New entry</string>
    <string name="entry_form_time_start_prompt" translatable="false">Anfangszeitpunkt</string>
    <string name="entry_form_time_end_prompt">Endzeitpunkt</string>
    <string name="entry_form_description_prompt">Description...</string>
    <string name="entry_form_button" translatable="false">Create</string>
    <string name="weekNo">%1$s wk.</string>
    <string name="date_duration">%1$d%2$d h</string>
    <string name="entry_edit_title">%1$s edit</string>
    <string name="entry_error_end_before_start">Das Ende liegt vor dem Start.</string>
    <string name="duration_format">%1$02d:%2$02d</string>
    <string name="duration">Dauer</string>
    <string name="entry_deletion_confirmation">Eintrag von %1$s bis %2$s wirklich löschen?</string>
    <string name="loading">Lädt</string>
    <string name="evaluation">Auswertung</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>